--- a/style.css
+++ b/style.css
@@ -1,137 +1,135 @@
 html,
 body,
 * {
-   padding: 0;
-   margin: 0;
-   box-sizing: border-box;
-   font-size: 62.5%;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-size: 62.5%;
 }
-body{
-    background-color: grey;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-.main-header{
-    font-size: 10em;
-    text-align: center;
-    color: black;
-    border: 1rem solid black;
-    margin-left: 50rem;
-    margin-right: 50rem;
-    margin-top: 10rem;
-    margin-bottom: 10rem;
-    background-color: lightyellow;
+body {
+  background-color: grey;
+  font-family: "Times New Roman", Times, serif;
 }
 
-.parent{
-    font-size: 30px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+.main-header {
+  font-size: 10em;
+  text-align: center;
+  color: black;
+  border: 1rem solid black;
+  margin-left: 50rem;
+  margin-right: 50rem;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  background-color: lightyellow;
 }
-.child{
-    width: 28%;
+
+.parent {
+  font-size: 30px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.child {
+  width: 28%;
 }
 .child-1,
-.child-3{
-    border: 3px solid black;
-    height: 20em;
-    margin-bottom: 5rem;
-    text-align: center;
-    background-color: lightyellow;
-    box-shadow: 4px 4px 8px;
+.child-3 {
+  border: 3px solid black;
+  height: 20em;
+  margin-bottom: 5rem;
+  text-align: center;
+  background-color: lightyellow;
+  box-shadow: 4px 4px 8px;
 }
-.child-2{
-    border: 3px solid black;
-    height: 20em;
-    margin-bottom: 5rem;
-    text-align: center;
-    background-color: lightyellow;
-    box-shadow: 4px 4px 8px;
-}
-
-.img{
-    border: 5px solid gray;
-    margin-top: 1.75em;
-    width: 35em;
-    height: 20em;
-}
-.img-2{
-    border: 5px solid gray;
-    margin-top: 1.75em;
-    width: 35em;
-    height: 20em;
+.child-2 {
+  border: 3px solid black;
+  height: 20em;
+  margin-bottom: 5rem;
+  text-align: center;
+  background-color: lightyellow;
+  box-shadow: 4px 4px 8px;
 }
 
-.adult-1{
-    margin-top: 1.5rem;
-    font-size: 1em;
+.img {
+  border: 5px solid gray;
+  margin-top: 1.75em;
+  width: 35em;
+  height: 20em;
+}
+.img-2 {
+  border: 5px solid gray;
+  margin-top: 1.75em;
+  width: 35em;
+  height: 20em;
+}
+
+.adult-1 {
+  margin-top: 1.5rem;
+  font-size: 1em;
 }
 
 .img:hover {
-    -webkit-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    transform: scale(1.1);
+  -webkit-transform: scale(1.15);
+  -ms-transform: scale(1.15);
+  transform: scale(1.15);
 }
 
-.main-header:hover{
-    transform: skew(-20deg);
+.main-header:hover {
+  transform: skew(-20deg);
 }
 
-.child-2:hover{
-    color: black;
-    background: lightblue;
+.child-2:hover {
+  color: black;
+  background: lightblue;
 }
-.child-3:hover{
-    color: black;
-    background: lightblue;
+.child-3:hover {
+  color: black;
+  background: lightblue;
 }
-.child-1:hover{
-    color: black;
-    background: lightblue;
-}
-
-.adult-1:hover{
-    color: black;
-    background: lightyellow;
-}
-.parent:hover .child:not(:hover){
-    opacity: 0.3;
-    transform: scale(0.7);
-    transition: all 0.3s ease-in;
+.child-1:hover {
+  color: black;
+  background: lightblue;
 }
 
-.animation{
-    height: 2rem;
-    width: 2rem;
-    animation: test 4s infinite;
-    position: absolute;
-    
+.adult-1:hover {
+  color: black;
+  background: lightyellow;
 }
-@keyframes test{
-    0%{
+.parent:hover .child:not(:hover) {
+  opacity: 0.3;
+  transform: scale(0.7);
+  transition: all 0.3s ease-in;
+}
+
+.animation {
+  height: 2rem;
+  width: 16.5rem;
+  animation: test 4s infinite;
+  position: absolute;
+  top: 220;
+  left: 10;
+  font-size: 3em;
+}
+
+@keyframes test {
+  0% {
+    left: 40%;
+    background-color: lightyellow;
+  }
+  25% {
     left: 50%;
-    bottom: 10%;
-    background-color: red;
-    }
-    25%{
-        left: 50%;
-        bottom: 20%;
-        background-color: blue
-    }
-    50%{
-        left: 55%;
-        bottom: 20%;
-        background-color: green
-    }
-    75%{
-        left: 55%;
-        bottom: 10%;
-        background-color: yellow
-    }
-    100%{
-        left: 50%;
-        bottom: 10%;
-        background-color: purple
-    }
+    background-color: lightyellow;
+  }
+  50% {
+    left: 40%;
+    background-color: lightyellow;
+  }
+  75% {
+    left: 50%;
+    background-color: lightyellow;
+  }
+  100% {
+    left: 40%;
+    background-color: lightyellow;
+  }
 }
